--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
   </head>
   <body>
-    <h1>Hello?</h1>
-    <h2>H1?</h2>
+    <div id="root"></div>
     <script src="main.js"></script>
   </body>
 </html>
